less/bootstrap-theme/global.less
//
// Global
// --------------------------------------------------

body {
    /* Support for all WebKit browsers. */
    -webkit-font-smoothing: antialiased;
    /* Support for Safari and Chrome. */
    text-rendering: optimizeLegibility;

    /* Support for Firefox. */
    -moz-osx-font-smoothing: grayscale;

    /* Support for IE. */
    font-feature-settings: 'liga';
}

.big-text {
    .text-shadow(2px 1px 2px rgba(0, 0, 0, 0.2));
}

a:focus,
a:hover,
a:active {
    text-decoration: none;
}

a:focus,
a:hover,
a:active,
button,
input[type="button"],
input[type="submit"] {
    outline: none !important;
    .tap-highlight-color(rgba(0,0,0,0));
}

blockquote p {
    font-size: @font-size-medium;
}

ul {
    padding-left: 30px;
}

.overflow-hidden {
    overflow: hidden;
}

.no-margin {
    margin: 0 !important;
}

.no-margin-y {
    margin-top: 0 !important;
    margin-bottom: 0 !important;
}

.no-margin-x {
    margin-left: 0 !important;
    margin-right: 0 !important;
}

.no-margin-top {
    margin-top: 0 !important;
}

.no-margin-bottom {
    margin-bottom: 0 !important;
}

.no-margin-left {
    margin-left: 0 !important;
}

.no-margin-right {
    margin-right: 0 !important;
}

.big-text {
    font-size: 61px;
    line-height: 70px !important;
    padding-bottom: 5px;
}

// Image

.img-fill {
    display: flex;
    justify-content: center;
    align-items: center;
    overflow: hidden;

    img {
        flex-shrink: 0;
        min-width: 100%;
        min-height: 100%
    }
}

.no-padding {
    padding: 0 !important;
}

.sf-toolbar {
    z-index: @zindex-navbar-fixed + 3;
}

